# usb-pd-splitter

./: .gitignore  .kicad-happy.json  AGENTS.md  README.md  TODO.md  sym-lib-table  usb-pd-splitter.kicad_jobset  usb-pd-splitter.kicad_pcb  usb-pd-splitter.kicad_pro  usb-pd-splitter.kicad_sch
analysis/: manifest.json
automation/: pyproject.toml
automation/src/hwrelease/: __init__.py  cli.py
automation/tests/: test_release.py
bom/: README.md  usb-pd-splitter-rev-a.csv
docs/: DESIGN.md  connector-mapping.md  requirements.md
docs/assets/: usb-pd-splitter-isometric.render.json
docs/manufacturing/: release-process.md  tooling-decisions.md
hardware/3d_models/: README.md  USB4110-GF-A.stp
hardware/footprints/: README.md
hardware/symbols/: README.md  usb_c.lib
manufacturing/: README.md
manufacturing/profiles/: jlcpcb.toml
manufacturing/templates/: assembly-notes.md  fabrication-notes.md  inspection-checklist.md
outputs/: README.md
