[project]
name = "kicad-hwrelease"
version = "0.1.0"
description = "Deterministic KiCad hardware release validation and packaging"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hwrelease = "hwrelease.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hwrelease"]
